<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Plasma</string>
    <string name="wallpaper_name">Plasma</string>
    <string name="wallpaper_description">A configurable plasma generator.</string>
    <string name="settings_activity_title">Plasma Settings</string>
    <string name="help_activity_title">Plasma</string>

    <string name="button_close_app">use these settings</string>
    <string name="button_effect_library">load</string>
    <string name="button_effect_builder">back to editor</string>
    <string name="button_load_defaults">reset</string>
    <string name="button_save">save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_open_wallpaper_picker">open wallpaper picker</string>
    <string name="button_open_settings">show Plasma settings</string>
    <string name="button_hide_from_launcher">hide Plasma from app launcher</string>

    <string name="help_welcome">Thank you for trying the Plasma live wallpaper!</string>
    <string name="help_what_is">As you may already know, this is not a regular app &#8212; it\'s a wallpaper! That means it works a little differently. If you want see Plasma on your home screen, you need to set it as your wallpaper. Press the button below, and select \"Plasma\" from the list to get up and running.</string>
    <string name="help_play_with_settings">You\'re also welcome to play around with things first. Click below if you want to kick the tires. This will NOT activate the wallpaper on your home screen.</string>
    <string name="help_hide_icon">We also realize you may not want the Plasma icon cluttering up your launcher, so you can press the button below to hide it. Note: you may have to reboot before the icon disappears.</string>

    <string name="label_size">base size</string>
    <string name="label_movement">movement:</string>
    <string name="label_shape">shape:</string>
    <string name="label_x_move_modifier_1">x modifier 1</string>
    <string name="label_y_move_modifier_1">y modifier 1</string>
    <string name="label_x_move_modifier_2">x modifier 2</string>
    <string name="label_y_move_modifier_2">y modifier 2</string>
    <string name="label_color">brightness:</string>
    <string name="label_contrast">contrast:</string>
    <string name="label_intensity">intensity:</string>
    <string name="label_frequency">frequency:</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <string name="blue">blue</string>

    <string name="checkbox_low_priority">low priority</string>

    <string name="context_menu_title">Modify effect</string>
    <string name="context_menu_overwrite">Overwrite</string>
    <string name="context_menu_rename">Rename</string>
    <string name="context_menu_delete">Delete</string>

    <string name="settings_menu_lower_priority">Lower priority</string>
    <string name="settings_menu_raise_priority">Raise priority</string>
    <string name="settings_menu_reset_profiles">Reset Effect Library</string>

    <string name="invalid_name_title">Bad name</string>
    <string name="invalid_name_message">An effect name cannot be blank.</string>

    <string name="name_effect_title">New effect name</string>

    <string name="confirm_reset_title">Confirm reset</string>
    <string name="confirm_reset_message">Are you sure you want to reset to the default settings?</string>
    <string name="confirm_delete_title">Confirm delete</string>
    <string name="confirm_delete_message">Are you sure you want to delete \"%s?\"</string>
    <string name="confirm_replace_title">Confirm replace</string>
    <string name="confirm_replace_message">Are you sure you want to replace \"%s\" with your current settings?</string>
    <string name="confirm_reset_profiles_title">Confirm reset</string>
    <string name="confirm_reset_profiles_message">Are you sure you want to reset to the default Effect Library?\n\nThis will erase all of your personal effects, and cannot be undone.</string>

    <string name="library_init_title">Please wait</string>
    <string name="library_init_message">Initializing effect library.</string>

    <string name="pref_size">pref_size</string>
    <string name="pref_red_brightness">pref_red_amount</string>
    <string name="pref_red_contrast">pref_red_intensity</string>
    <string name="pref_red_frequency">pref_red_wavelength</string>
    <string name="pref_green_brightness">pref_green_amount</string>
    <string name="pref_green_contrast">pref_green_intensity</string>
    <string name="pref_green_frequency">pref_green_wavelength</string>
    <string name="pref_blue_brightness">pref_blue_amount</string>
    <string name="pref_blue_contrast">pref_blue_intensity</string>
    <string name="pref_blue_frequency">pref_blue_wavelength</string>
    <string name="pref_x_move_modifier_1">pref_speed1</string>
    <string name="pref_x_move_modifier_2">pref_speed2</string>
    <string name="pref_y_move_modifier_1">pref_speed3</string>
    <string name="pref_y_move_modifier_2">pref_speed4</string>
    <string name="pref_x_shape_modifier_1">pref_x_shape_modifier_1</string>
    <string name="pref_x_shape_modifier_2">pref_x_shape_modifier_2</string>
    <string name="pref_y_shape_modifier_1">pref_y_shape_modifier_1</string>
    <string name="pref_y_shape_modifier_2">pref_y_shape_modifier_2</string>

    <string name="pref_built_in_profiles_added">pref_built_in_profiles_added</string>
    <string name="pref_cotton_candy_added">pref_cotton_candy_added</string>
    <string name="pref_low_priority">pref_low_priority</string>
</resources>
